# divergence

./: .chaperone.json  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  components.json  drizzle.config.ts  eslint.config.js  index.html  package-lock.json  package.json  pull-request-draft.md  repo-summary.md  tailwind.config.js  vite.config.ts  vitest.config.ts
.changeset/: add-in-app-debug-console-filtering.md  agent-conversation-performance.md  agent-runtime-plan-mode-attachments.md  agent-runtime-pr-review-hardening.md  agent-session-real-changes.md  agent-session-rename-telemetry.md  agent-sidebar-tabs.md  agent-tool-timeline-groups.md  assistant-message-timestamps.md  automation-runs-create-divergence.md  bounded-editor-file-loads.md  branch-changes-mode.md  brave-crabs-bathe.md  brave-doors-flow.md  brave-tasks-shine.md  brave-walls-rest.md  bright-changes-panel.md  bright-suns-admire.md  brisk-sidebar-toggle.md  calm-spies-talk.md  chilly-teams-pump.md  clear-kids-talk.md  codex-conversation-context.md  command-center-file-exclusion-system.md  command-center-performance.md  cool-forks-sit.md  curly-cooks-dance.md  curvy-beers-invent.md  deep-chefs-search.md  dry-audit-improvements.md  easy-ears-roll.md  editor-session-project-search.md  eighty-boxes-peel.md  every-mirrors-tickle.md  extract-shared-ui-components.md  fair-poems-pretend.md  fair-taxis-worry.md  fast-birds-wash.md  file-quick-switcher.md  fix-automation-run-null-overwrite.md  (+86 more)
.ralphy/: config.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  git.rs  lib.rs  main.rs  usage_limits.rs  ws_auth.rs  ws_mdns.rs  ws_server.rs
src-tauri/src/agent_runtime/: activities.rs  attachments.rs  claude.rs  codex.rs  constants.rs  cursor.rs  gemini.rs  messages.rs  mod.rs  opencode.rs  persistence.rs  provider_output.rs  provider_registry.rs  session_updates.rs  skills.rs  state.rs  types.rs
(+741 files in other folders)
