[package]
name = "divergence"
version = "0.1.0"
description = "A desktop app for managing multiple projects with embedded terminals"
authors = ["Divergence"]
edition = "2021"

[lib]
name = "divergence_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "~2.9", features = ["tray-icon"] }
tauri-plugin-shell = "~2.2"
tauri-plugin-dialog = "~2.2"
tauri-plugin-sql = { version = "~2.2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-pty = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
